Support module path for JUnit (#836)